--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tut",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://api.zyrax.fit",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -10,6 +11,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.12.1",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
