--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 REACT_APP_API_BASE_URL=https://api.zyrax.fit
+
+CLOUDINARY_CLOUD_NAME=ddy1st32g
+CLOUDINARY_API_KEY=581957468989827
+CLOUDINARY_API_SECRET=m2zQHGU2zw6Yr6bcZKt3P1g9zU0
