--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tut",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://api.zyrax.fit",
+  "proxy": "http://127.0.0.1:8000/",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
