--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-#REACT_APP_API_BASE_URL=https://api.zyrax.fit
-REACT_APP_API_BASE_URL=http://127.0.0.1:8000
+REACT_APP_API_BASE_URL=https://api.zyrax.fit
+#REACT_APP_API_BASE_URL=http://127.0.0.1:8000
 CLOUDINARY_CLOUD_NAME=ddy1st32g
 CLOUDINARY_API_KEY=581957468989827
 CLOUDINARY_API_SECRET=m2zQHGU2zw6Yr6bcZKt3P1g9zU0 s
